--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@transunion-ui/tablejs": "^2.0.6",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "jquery": "^3.6.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "faker": "^5.5.3"
   }
 }
